Products.CMFCore Changelog
==========================

2.1.3-beta (unreleased)
-----------------------


2.1.2 (2008-09-13)
------------------

- fiveactionstool: fix typo in a method name that isn't even used in the CMF 
  or Plone.

- test fixture: Fix failng tests with GenericSetup > 1.3 by explicitly
  loading GS' meta.zcml during setup.


2.1.2-beta (2008-08-26)
-----------------------

- completed devolution from monolithic CMF package into its component
  products that are distributed as eggs from PyPI.


2.1.1 (2008-01-06)
------------------

- exportimport.content: Add simple guard against import failures when
  the ".objects" file contains empty lines.
  (https://bugs.launchpad.net/zope-cmf/+bug/176328)


2.1.1-beta (2007-12/29)
-----------------------

- Testing: Derive test layers from ZopeLite layer if available.

- Updated to the 0.3 release of five.localsitemanager.

- Events: Fixed some handleContentishEvent issues.
  Moved _clearLocalRolesAfterClone code to separate handler that is
  triggered before indexing and also for folders. Made sure notifyModified
  is not called if objects are just moved.

- PortalObject: Added setSite to getSiteManager for old instances. This
  fixes migrations from Plone 2.1 to 3.0.

- FSImage: Supply class-level defaults for 'alt', 'height', and 'width',
  to avoid acquiring objects with the same names.
  (http://www.zope.org/Collectors/CMF/507)

- Testing: Derive test layers from ZopeLite layer if available.

- PortalObject: Fixed a bug in the site manager creation code, which would
  assign the __parent__ pointer to the Aq-wrapper and not the actual
  object.


2.1.0 (2007-08-08)
------------------

- Fixed all componentregistry.xml files to use plain object paths and strip
  and slashes. GenericSetup does only support registering objects which are
  in the site root.

- PortalFolder: Enabled 'Components' ZMI tab.
  This GenericSetup tab allows to inspect and edit component registrations.
